--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET
+    # - name: Setup .NET
+    - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
@@ -24,18 +25,18 @@ jobs:
     - name: Test
       run: dotnet test --no-build
       
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v2.1.0
-      with:
+    # - name: Setup .NET Core SDK
+      # uses: actions/setup-dotnet@v2.1.0
+      # with:
     # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x
-          dotnet-version: # optional
+          # dotnet-version: # optional
     # Optional global.json location, if your global.json isn't located in the root of the repo.
-          global-json-file: # optional
+          # global-json-file: # optional
     # Optional package source for which to set up authentication. Will consult any existing NuGet.config in the root of the repo and provide a temporary NuGet.config using the NUGET_AUTH_TOKEN environment variable as a ClearTextPassword
-          source-url: # optional
+          # source-url: # optional
     # Optional OWNER for using packages from GitHub Package Registry organizations/users other than the current repository's owner. Only used if a GPR URL is also provided in source-url
-          owner: # optional
+          # owner: # optional
     # Optional NuGet.config location, if your NuGet.config isn't located in the root of the repo.
-          config-file: # optional
+          # config-file: # optional
     # Whether prerelease versions should be matched with non-exact versions (for example 5.0.0-preview.6 being matched by 5, 5.0, 5.x or 5.0.x). Defaults to false if not provided.
-        include-prerelease: # optional
+        # include-prerelease: # optional
