--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
-    # - name: Setup .NET Core SDK
+        
+    - name: Setup .NET Core SDK
+      uses: actions/setup-dotnet@v2.1.0
+
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
