--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,19 +15,17 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
+          dotnet-version: '3.1.x'
       - run: dotnet build
-
+      - name: Restore dependencies
+        run: dotnet restore
+    
     # steps:
     # - uses: actions/checkout@v3
     # - name: Setup .NET
     #   uses: actions/setup-dotnet@v2
     #   with:
     #     dotnet-version: 6.0.x
-        
-    # - name: Setup .NET Core SDK
-    #   uses: actions/setup-dotnet@v2.1.0
-
     # - name: Restore dependencies
     #   run: dotnet restore
     # - name: Build
