--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,8 @@ jobs:
       - run: dotnet build
       - name: Restore dependencies
         run: dotnet restore
+      - name: Build
+        run: dotnet build
     
     # steps:
     # - uses: actions/checkout@v3
