--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,8 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build
+      - name: Test
+        run: dotnet test
     
     # steps:
     # - uses: actions/checkout@v3
